force-app/main/default/objects/Star_Wars_Planet__c/Star_Wars_Planet__c.object-meta.xml
<CustomObject>
    <label>Star Wars: Planet</label>
    <nameField>
        <label>Star Wars: Planets Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Star Wars: Planets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>