force-app/main/default/objects/Star_Wars_Planet__c/fields/Climate__c.field-meta.xml
<CustomField>
    <fullName>Climate__c</fullName>
    <label>Climate</label>
    <length>30</length>
    <type>Text</type>
</CustomField>