force-app/main/default/objects/Star_Wars_Planet__c/fields/Diameter__c.field-meta.xml
<CustomField>
    <fullName>Diameter__c</fullName>
    <label>Diameter</label>
    <length>10</length>
    <type>Text</type>
</CustomField>