force-app/main/default/objects/Star_Wars_Planet__c/fields/Gravity__c.field-meta.xml
<CustomField>
    <fullName>Gravity__c</fullName>
    <label>Gravity</label>
    <length>200</length>
    <type>Text</type>
</CustomField>