force-app/main/default/objects/Star_Wars_Planet__c/fields/Orbital_Period__c.field-meta.xml
<CustomField>
    <fullName>Orbital_Period__c</fullName>
    <label>Orbital Period</label>
    <length>100</length>
    <type>Text</type>
</CustomField>