force-app/main/default/objects/Star_Wars_Planet__c/fields/Population__c.field-meta.xml
<CustomField>
    <fullName>Population__c</fullName>
    <label>Population</label>
    <length>100</length>
    <type>Text</type>
</CustomField>