force-app/main/default/objects/Star_Wars_Planet__c/fields/Rotation_Period__c.field-meta.xml
<CustomField>
    <fullName>Rotation_Period__c</fullName>
    <label>Rotation Period</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>