force-app/main/default/objects/Star_Wars_Planet__c/fields/Surface_Water__c.field-meta.xml
<CustomField>
    <fullName>Surface_Water__c</fullName>
    <label>Surface Water</label>
    <length>200</length>
    <type>Text</type>
</CustomField>