force-app/main/default/objects/Star_Wars_Planet__c/fields/Terrain__c.field-meta.xml
<CustomField>
    <fullName>Terrain__c</fullName>
    <label>Terrain</label>
    <length>100</length>
    <type>Text</type>
</CustomField>