force-app/main/default/objects/Star_Wars_Planet__c/fields/URL__c.field-meta.xml
<CustomField>
    <fullName>URL__c</fullName>
    <description>Link to API source</description>
    <label>URL</label>
    <type>Url</type>
</CustomField>